--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </span></label>
                           <input type="tel" id="phone"
                            placeholder="+234123456789" name="phone" 
-                           min-length="11" pattern="[0-9- ]" max-length="11" value="">
+                           min-length="11"  max-length="11" value="">
                          </div>
                         </div>
                      </div>
