--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/herdhebayor">Adebayo sikiru temitope</a>.
   </div>
 <script src="form.js"></script>
 </body>
